# kb-agent

./: .env.example  .gitignore  README.md  pyproject.toml
agent/: approval.py  config.py  graph.py  mcp_client.py  memory.py  runner.py
docs/: devlog.md  eval-report.md
docs/adr/: 001-human-in-the-loop-approval.md
eval/: cases.jsonl  result.json  run_eval.py
scripts/: seed_tickets.py  try_agent.py  try_memory.py  verify_servers.py
servers/: kb_search.py  ticket.py  ticket_db.py  web_fetch.py
tests/: test_approval.py  test_graph.py  test_memory.py  test_ticket.py
