[project]
name = "kb-agent"
version = "0.1.0"
description = "智能客服工单 Agent：MCP servers + LangGraph 编排"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "pydantic-settings>=2.4",
    "trafilatura>=1.12",   # 网页正文提取
]

[project.optional-dependencies]
agent = [
    "langgraph>=0.2",
    "langchain-openai>=0.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sse-starlette>=2.1",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["servers*", "agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
